Fixed bg image not showing issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -162,7 +162,7 @@ main {
     margin-bottom: 80px;
 }
 .quotebg {
-    background-image: url(/assets/quote-bg.png);
+    background-image: url(./assets/quote-bg.png);
     background-repeat: no-repeat;
     background-position: top left;
 }
@@ -282,7 +282,7 @@ main {
 .news-img {
     width: 100%;
     height: 300px;
-    background: url(/assets/satelite.png);
+    background: url(./assets/satelite.png);
     border-radius: 24px;
     background-size: cover;
 }
